@@ -907,6 +907,7 @@ Nick Seidenman
 Žiga Seilnach
 Yury Selivanov
 Fred Sells
+Yuriy Senko
 Jiwon Seo
 Joakim Sernbrant
 Roger Serwy
